📁 Add discord-api-types dependencies
